--- a/index.html
+++ b/index.html
@@ -40,45 +40,21 @@ layout: default
                     <p>{{ site.footer.github }}</p>
                 </section>
                 <section>
-                    <h2>Sponsor</h2>
-                    <div class="ad">
-                        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                        <ins class="adsbygoogle"
-                             style="display:block; text-align:center;"
-                             data-ad-layout="in-article"
-                             data-ad-format="fluid"
-                             data-ad-client="ca-pub-1702577941194110"
-                             data-ad-slot="9823584598"></ins>
-                        <script>
-                            (adsbygoogle = window.adsbygoogle || []).push({});
-                        </script>
-                    </div>
-                </section>
-                <section>
                     <h2>Follow me on ...</h2>
                     <ul class="icons">
                         <li><a href="{{ site.social_urls.facebook }}" class="icon fa-facebook"><span
                                 class="label">Facebook</span></a>
                         </li>
-                        <li><a href="{{ site.social_urls.twitter }}" class="icon fa-twitter"><span
-                                class="label">Twitter</span></a>
-                        </li>
                         <li><a href="{{ site.social_urls.instagram }}" class="icon fa-instagram"><span
                                 class="label">Instagram</span></a>
-                        </li>
-                        <li><a href="{{ site.social_urls.dribbble }}" class="icon fa-dribbble"><span
-                                class="label">Dribbble</span></a>
                         </li>
                         <li><a href="{{ site.social_urls.github }}" class="icon fa-github"><span
                                 class="label">GitHub</span></a>
                         </li>
-                        <li><a href="{{ site.social_urls.linkedin }}" class="icon fa-linkedin"><span
-                                class="label">LinkedIn</span></a>
-                        </li>
                     </ul>
                 </section>
                 <p class="copyright">
-                    &copy; {{ site.author }}. Design: {{ site.web_design }}
+                    &copy; {{ site.author }}. 
                 </p>
             </div>
             <div>
