--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ layout: default
             <a href="{{ site.baseurl }}{{ site.image_fulls_loc }}/{{ image.name }}" class="image">
                 <img src="{{ site.baseurl }}{{ site.image_thumbs_loc }}/{{ image.name }}" alt=""
                      data-name="{{ image.name }}"/></a>
-            <!--<h2></h2>
-            <p></p>-->
+            <h2>Testing what</h2> <!-- was taken out -->
+            <p>this possibly was for </p> <!-- was taken out -->
         </article>
         {% endif %}
         {% endfor %}
@@ -57,6 +57,8 @@ layout: default
                     &copy; {{ site.author }}. 
                 </p>
             </div>
+            
+            <!--
             <div>
                 <section>
                     <h2>Get in touch</h2>
@@ -77,6 +79,8 @@ layout: default
                     </form>
                 </section>
             </div>
+            -->
+            
         </div>
     </footer>
 </div>
