--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ layout: default
         {% if image.path contains 'fulls' %}
         <article class="thumb">
             
-            <a href="{{ site.url }}{{ site.baseurl }}{{ site.image_fulls_loc }}/{{ image.name }}" class="image">
-                <img src="{{ site.url }}{{ site.baseurl }}{{ site.image_thumbs_loc }}/{{ image.name }}" alt=""
+            <a href="{{ site.baseurl }}{{ site.image_fulls_loc }}/{{ image.name }}" class="image">
+                <img src="{{ site.baseurl }}{{ site.image_thumbs_loc }}/{{ image.name }}" alt=""
                      data-name="{{ image.name }}"/></a>
             
         </article>
